Update my WeatherApp

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         </header>
         <main>
             <section class="location">
-                <div class="city">New York, US</div>
-                <div class="date">Wednesday 18 August 2021</div>
+                <div class="city">Enter the city ↑</div>
+                <div class="date"></div>
                 <div class="current">
-                    <div class="temp">27<span>°c</span></div>
-                    <div class="weather">Sunny</div>
-                    <div class="hi-low">25°c / 29°c</div>
+                    <div class="temp">Temp<span>°c</span></div>
+                    <div class="weather"></div>
+                    <div class="hi-low"></div>
                 </div>
             </section>
         </main>
